# demos

./: .gitignore
demos/: .clang-format  meson.build
demos/.devcontainer/: Containerfile  devcontainer.json
demos/apps/: meson.build
demos/apps/GLES/: main.cpp  meson.build  stb_image.h
demos/apps/Surface/: main.cpp  meson.build
demos/apps/Window/: main.cpp  meson.build
demos/apps/window/: main.cpp
demos/libs/: meson.build
demos/libs/Core/: CanMakeRefPtr.h  EventLoop.cpp  EventLoop.h  NonNull.h  NonnullRefPtr.h  OptionSet.h  RefCounted.h  RefPtr.h  WeakPtr.h  Weakable.h  meson.build
demos/libs/Foundation/: EnableWeakPtr.h  Foundation.h  NonNull.h  NonNullRefPtr.h  Object.h  OptionSet.h  Protocol.h  RefCounted.h  RefPtr.h  StrongPtr.h  WeakPtr.h  Weakable.h
demos/libs/GUI/: Application.cpp  Application.h  Cursor.cpp  Cursor.h  Event.h  Forward.h  View.cpp  View.h  Window.cpp  Window.h  WindowCloseButton.cpp  WindowCloseButton.h  WindowDecorationView.cpp  WindowDecorationView.h  WindowMaximizeButton.cpp  WindowMaximizeButton.h  WindowTitleBar.cpp  WindowTitleBar.h  meson.build
demos/libs/GUI/Wayland/: Cursor.cpp  Cursor.h  Display.cpp  Display.h  Forward.h  Pointer.cpp  Pointer.h  Seat.cpp  Seat.h  Surface.cpp  Surface.h  Toplevel.cpp  Toplevel.h  Window.cpp  Window.h  meson.build
demos/libs/Gfx/: Color.cpp  Color.h  Context.h  Forward.h  Point.h  Rect.h  Size.h  meson.build
demos/libs/Gfx/Cairo/: Context.cpp  Context.h  meson.build
demos/libs/Gfx/EGL/: Context.cpp  Context.h  meson.build
demos/libs/Gfx/GLES/: Program.cpp  Program.h  meson.build
demos/libs/Gfx/Wayland/: Display.cpp  Display.h  Pointer.cpp  Pointer.h  Seat.cpp  Seat.h  Surface.cpp  Surface.h  Toplevel.cpp  Toplevel.h  meson.build
demos/libs/Platform/: Display.cpp  Display.h  Event.h  Window.cpp  Window.h  meson.build
demos/libs/Platform/Wayland/: Display.cpp  Display.h  Pointer.cpp  Pointer.h  Seat.cpp  Seat.h  Window.cpp  Window.h  meson.build
demos/libs/core/: event_loop.cpp  event_loop.h  meson.build  nonnull_ref_ptr.h  ref_counted.h  ref_ptr.h  weak_ptr.h  weakable.h
demos/libs/gfx/: color.cpp  color.h  context.h  meson.build  point.h  rect.h  size.h
demos/libs/gfx/cairo/: context.cpp  context.h  meson.build
demos/libs/gui/: application.cpp  application.h  display.cpp  display.h  event.h  gui.h  meson.build  view.cpp  view.h  wayland_display.cpp  wayland_display.h  wayland_pointer.cpp  wayland_pointer.h  wayland_seat.cpp  wayland_seat.h  wayland_window.cpp  wayland_window.h  window.cpp  window.h  window_decoration_view.cpp  window_decoration_view.h  window_title_bar.cpp  window_title_bar.h
demos/libs/gui/wayland/: cursor.cpp  cursor.h  display.cpp  display.h  meson.build  pointer.cpp  pointer.h  seat.cpp  seat.h  wayland_display.cpp  wayland_display.h  wayland_pointer.cpp  wayland_pointer.h  wayland_seat.cpp  wayland_seat.h  wayland_window.cpp  wayland_window.h  window.cpp  window.h
demos/subprojects/: .gitignore
demos/tests/: meson.build
demos/tests/Core/: RefCountedTest.cpp  meson.build
demos/tests/Foundation/: EnableWeakPtrTest.cpp  NonNullTest.cpp  ObjectAndProtocolTest.cpp  RefCountedTest.cpp  RefPtrTest.cpp  WeakPtrTest.cpp  WeakableTest.cpp  meson.build
macos/: AppDelegate.h  AppDelegate.m  main.m  meson.build
wayland/: README.md
wayland/client/: client.c  client.cpp  display.c  display.cpp  display.h  io.github.obyknovenius.Client.Devel.json  label.cpp  label.h  layer.cpp  layer.h  meson.build  text_view.cpp  view.h  window.c  window.cpp  window.h  window_button.cpp  window_button.h  window_close_button.cpp  window_close_button.h  window_maximize_button.cpp  window_maximize_button.h
wayland/client/gfx/: point.h  rect.h  size.h
wayland/client/ui/: display.cpp  display.h  display_server.cpp  display_server.h  layer.cpp  layer.h  meson.build  text_view.cpp  text_view.h  title_bar.cpp  title_bar.h  view.cpp  view.h  window.cpp  window.h  window_button.cpp  window_button.h  window_close_button.cpp  window_close_button.h  window_decoration_view.cpp  window_decoration_view.h  window_maximize_button.cpp  window_maximize_button.h
wayland/client/ui/gl/: meson.build  texture.cpp  texture.h
wayland/client/ui/wayland/: display_server.cpp  display_server.h  meson.build  server.cpp  server.h  window.cpp  window.h
